--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
   "dependencies": {
     "aws-sdk": "^2.493.0",
     "file-type": "^12.0.1",
-    "md5": "^2.2.1"
+    "md5": "^2.2.1",
+    "mime-types": "^2.1.24"
   },
   "devDependencies": {}
 }
