--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "easy-yandex-s3",
-  "version": "1.0.1",
+  "version": "1.1.0",
   "description": "Use Yandex S3 API to upload, list, download and remove files from Yandex Cloud service.",
   "main": "index.js",
   "scripts": {
@@ -27,7 +27,8 @@
     "aws-sdk": "^2.493.0",
     "file-type": "^12.0.1",
     "md5": "^2.2.1",
-    "mime-types": "^2.1.24"
+    "mime-types": "^2.1.24",
+    "uniqid": "^5.0.3"
   },
   "devDependencies": {}
 }
