--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "easy-yandex-s3",
-  "version": "1.1.0",
+  "version": "1.1.1",
   "description": "Use Yandex S3 API to upload, list, download and remove files from Yandex Cloud service.",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha test/**/*.js"
   },
   "repository": {
     "type": "git",
@@ -30,5 +30,9 @@
     "mime-types": "^2.1.24",
     "uniqid": "^5.0.3"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "mocha": "^6.2.0",
+    "mockery": "^2.1.0"
+  }
 }
