--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   },
   "devDependencies": {
     "chai": "^4.2.0",
+    "dotenv": "^8.0.0",
     "mocha": "^6.2.0",
     "mockery": "^2.1.0"
   }
