--- a/package.json
+++ b/package.json
@@ -6,6 +6,8 @@
   "scripts": {
     "test": "mocha test/**/*.js"
   },
+  "engines" : { "node" : ">=6.0.0" },
+  "engineStrict" : true,
   "repository": {
     "type": "git",
     "url": "git+https://github.com/powerdot/easy-yandex-s3.git"
