--- a/package.json
+++ b/package.json
@@ -32,9 +32,8 @@
   "dependencies": {
     "aws-sdk": "^2.493.0",
     "file-type": "^12.0.1",
-    "md5": "^2.2.1",
     "mime-types": "^2.1.24",
-    "uniqid": "^5.0.3"
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "chai": "^4.2.0",
